# bf2_memhack_v2

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh
src/: app_states.cpp  app_states.hpp  dllmain.cpp  main.cpp  worker.cpp  worker.hpp
src/bf2_classes/: class_manager.hpp  renderer.hpp
src/constants/: assembly_instructions.hpp  constants.hpp  module_addresses.cpp  module_addresses.hpp
src/features/: feature_common.cpp  feature_common.hpp  i_feature.hpp
src/features/minimap/: kit_icons.cpp  kit_icons.hpp  minimap_1.cpp  minimap_1.hpp  minimap_4.cpp  minimap_4.hpp  minimap_7.cpp  minimap_7.hpp  minimap_manager.cpp  minimap_manager.hpp
src/features/nametags/: nametags.cpp  nametags.hpp  nametags_display_distance.cpp  nametags_display_distance.hpp  nametags_display_range.cpp  nametags_display_range.hpp  nametags_distance_range.cpp  nametags_distance_range.hpp  nametags_manager.cpp  nametags_manager.hpp  nametags_range.cpp  nametags_range.hpp
src/gui/: imgui_manager.cpp  imgui_manager.hpp
src/helpers/: bf2_classes.cpp  bf2_classes.hpp  hooking.cpp  hooking.hpp  memory_operations.cpp  memory_operations.hpp  module_addresses.cpp  module_addresses.hpp  windows.cpp  windows.hpp
src/hooks/: hook_manager.cpp  hook_manager.hpp  original_functions.cpp  original_functions.hpp
src/hooks/functions/: dx9.cpp  dx9.hpp  windows.cpp  windows.hpp
toolchains/: i686-w64-windows.cmake
